# sprint-4

movies_api/: .env.db.example  .env.movies_admin.example  .env.movies_api  .env.sqlite_to_postgres.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
movies_api/src/: main.py
movies_api/src/api/v1/: films.py  genres.py  messages.py  persons.py  utils.py
movies_api/src/core/: config.py
movies_api/src/db/: elastic.py  redis.py
movies_api/src/models/: base_models.py  data_models.py  response_models.py
movies_api/src/services/: base_service.py  cache.py  data_services.py  films.py  genres.py  persons.py
postgres_to_es/: .dockerignore  .env.postgres_to_es.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  setup.cfg
postgres_to_es/postgres_to_es/: __init__.py  dbmanager.py  esmanager.py  esmodels.py  etl.py  logger.py  pgloader.py  retry.py  settings.py  state.py  transformer.py
postgres_to_es/postgres_to_es/assets/: genres.json  movies.json  persons.json
yan_api/: .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
yan_api/src/: main.py  requirements.txt
yan_api/src/api/v1/: film.py  genre.py  person.py  schemas.py
yan_api/src/core/: config.py
yan_api/src/models/: base.py  film.py  genre.py  person.py
yan_api/src/services/: film.py  genre.py  person.py
yan_api/tasks/: 03_models.md
yan_api/zoo/: test.py
